--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -7,24 +7,18 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Ragnarok X tools and skill planner"
+      content="An unofficial, light-weight Ragnarok X skill planner. Plan and share your skill loadouts with other players."
     />
+    <meta name="keywords" content="rox, ragnarok x next generation, ragnarok x, skill build, skill planner, ragnarok">
+    <meta property="og:title" content="Ragnarok X Tools - Skill Planner">
+    <meta property="og:site_name" content="Ragnarok X Tools">
+    <meta property="og:url" content="https://ragnarokx-tools.github.io/planner/">
+    <meta property="og:description" content="An unofficial, light-weight Ragnarok X skill planner. Plan and share your skill loadouts with other players.">
+    <meta property="article:tag" content="rox, ragnarok x next generation, ragnarok x, skill build, skill planner, ragnarok">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/KAread.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Ragnarok X Tools</title>
+    
+    <title>Ragnarok X Tools - Skill Planner</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
